# thisweekinbevy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  justfile  mocha.tmTheme  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: deploy.yml  release.yml  test.yml
.sqlx/: query-01136abb22f93c57ed38b1cb2ae242ca64355765b081dc11a118cbed3e467b3b.json  query-019b77847bcc4e92de699970b567b06666912e9ff4da868b40532311ed267abf.json  query-0942f282362ecbe774701c1f8f8719157b7b43af6c976230a1312a6b05de2cf0.json  query-095cac91aba9e577b1e4a7625cf5629e60005bc6f5da456e5c144ea67960c4c6.json  query-0e2be3f3bfd1c806c848c82457d662e3ad2ec65ef178eb2f9ae94428368b28c8.json  query-16f2de5d28484260179bfaadf84bcf1b929503daf42784d4d54deb232e3faadc.json  query-1b0bcd668a173a5514d10c62a5b73ead45a2b9289ec74bfd69bacbc57c3f0a01.json  query-25854f44b479c234760b3bfb98c441099f401c9674da83bc58636cfa2fc891c0.json  query-27cbecbe6a8e280a6f55dfb59a2a55316204e498d61238fd398117282cc3e9b1.json  query-28b54e78b13519d2cb6b4c0dd614a8b9a3c536ed5c76266d8be17e0ac6dfe42f.json  query-2a3541f7d45d8beae78ac06280f2d5f50833f82a35f5614584fd263077956620.json  query-2b4a67b64e58ce2198f6eb60de9847d4504700aa6a03b1600481c7b26617e454.json  query-31e6ddfd38bed07cfc5d3ddd8674818b0e6fc9fc1535c6b6c7f88f6ed8b3059b.json  query-3498b6cb6ece3d679798ef2d4a4cd0452b9402a1f920f386ab1cece2a9861636.json  query-34ccdc49189a0b27fb662fefe86c608356436a6904622aaddfd67d37dfbc72da.json  query-385bfd181b368b51ea6f8a44954cd07b06d8e1d60eabafeaf2bea60932b1c2e4.json  query-39000d7595778665b228e44d2b6b85186e7281834fbf990d734f9abc07b6f7aa.json  query-3a99709952b467a4a565209ddfe462da09aaf35f69f4f1dc7ed92d5c4c3d606b.json  query-3c5ea07ca90a5caa0c79ce1c68f02da26aec9c1b18123a60b2178a78b859da4c.json  query-43b3fe2005ac9469c57813bf62ff6b7725b0f04b643a2cb1efc19e79e2ccb969.json  query-4ad01dbc0d38e82b7912d1399e0d3dcd3a2c09685d10195a5c817ce22c32a1a9.json  query-52fd90958f1b2e6612dec13de314d06b75dd46ba21cf815137cd1b5fa6d306b0.json  query-5d7ed3cbf12beb8301dbeb953d46307541acf3b8a27e108729980ab9e2639dab.json  query-5fa0bf25cd9bb4c7244b287a9a6daf5ab73100f70f45a840a7a5bbedfbd7b132.json  query-676559dbcbcea1783d304540b698f76c897ac1876d0ad35de8b97f6cce26fc43.json  query-68bb47f9051939fa1296d9874b9a1190aa58ad748298c865e3e095a07c3269f0.json  query-69351827b7de922c0919b9f5c5c7df10bb4c5cfb57e9cbd96adb978b29d82245.json  query-6f2628ba6f45022f3cd34aff2b19abb005230b31e2ad0c8c08ea3a78f050bd4e.json  query-734371e0a4a075109ee1d20ff75ab05626468c476c3be512e631b01d784347ac.json  query-74a628cfae7091eb0dc2d8e4a240cfcbde608ed57e1d21459497829188f61049.json  query-75d90fd359177bcec312352cd258122de11574571b99bd141f7ffd2fa7a9c45f.json  query-786dc2339e049419d09350c2f33a7f7accec34ab08b466d124c7f5f001cb8056.json  query-7fad14c65cb976e0d9db8f41fc22780d7ca70c8afb7ba1b4961515dfb3bdcd71.json  query-84ccdd515916417544c21357047f5a53b692a9891ba77026a9b72f8de068d61e.json  query-87c68fcc9885cedcc96dbd5d6a2d17e5d7ce621eaaa02256745ca91ea0234bee.json  query-8c121d41af7e409518a97fa6225ab881d79285a56edf6088739d15ab23e39d66.json  query-92cce4a4c5339d60f57d846e6b2c731924b1c77a9e0ac11dd29b2ed98ad144f4.json  query-9630fb7d0510dcb5131e7282a281a99fd8e75aea9c0ddee352ef78668c41ee3a.json  query-96c2263ba79e4896488f25fd81dfcf9da0422b287efa5f74524d9c6acf93ac6a.json  query-9970ab0554aa2b0bcf94324c683d589e6e8a400cdec5db25ef64eafbb3dbdfca.json  (+18 more)
docs/: developing.md
sql/: 001-tables.sql  002-devlogs.sql  003-posted-at.sql  004-users.sql  005-expand-cloudinary-ids.sql  006-expand-issue-description.sql
src/: app.rs  atom_feed.rs  auth.rs  error_template.rs  fileserv.rs  issue_date.rs  lib.rs  main.rs  markdown.rs  oauth.rs  session_store.rs  sql.rs  state.rs  users.rs
src/app/: components.rs  routes.rs
src/app/routes/: admin.rs  custom.rs  index.rs  issue.rs  issue__showcase.sql
src/app/routes/admin/: crate_release.rs  devlog.rs  educational.rs  github.rs  image.rs  issue.rs  issues.rs  showcase.rs
src/app/routes/admin/crate_release/: id.rs
src/app/routes/admin/devlog/: id.rs
src/app/routes/admin/educational/: id.rs
src/app/routes/admin/showcase/: id.rs
src/app/routes/issue/: cards.rs
style/: index.css
